# cli-tools

./: Cargo.toml  README.md
cpu/: Cargo.toml
disk/: Cargo.toml
mem/: Cargo.toml
src/: main.rs
src/cpu/: cpu_info.rs  cpu_subcommand.rs  mod.rs
src/disk/: disk_info.rs  disk_subcommand.rs  mod.rs
src/host/: host_info.rs  host_subcommand.rs  mod.rs
src/memory/: mem_info.rs  memory_subcommand.rs  mod.rs
src/network/: mod.rs  network_info.rs  network_subcommand.rs
src/process/: mod.rs  process_info.rs  process_subcommand.rs
src/socket/: mod.rs  tcp_socket.rs  tcp_socket_subcommand.rs
src/user/: mod.rs  user_info.rs  user_subcommand.rs
