[package]
name = "cli-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
concolor-clap = "0.1.0"
os = "0.1.0"
prettytable-rs = "0.10.0"
psutil = "3.3.0"
sysinfo = "0.30.10"
serde = { version = "1.0.197", features = ["derive"] }
netstat2 = "0.9.1"
